# gravity-edge-bundling

./: index.html  package-lock.json  package.json  vite.config.js
.agents/skills/gravity-edge-bundling-dev/: SKILL.md
assets/: gravity_edge_bundling_bg-CGdYWLGJ.wasm  index-CQeqnsAy.js  index-NRYm3sLo.js  index-u9_iO-YM.css
gravity-edge-bundling/: Cargo.toml
gravity-edge-bundling/src/: fft2d.rs  lib.rs  simulation.rs  webgpu.rs
gravity-edge-bundling/tests/: web.rs  webgpu_test.rs
src/: App.css  App.jsx  DataLoader.js  WasmManager.js  index.css
