[package]
name = "gravity-edge-bundling"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
rustfft = "6.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
wgpu = "0.19"
wasm-bindgen-futures = "0.4"
bytemuck = { version = "1.16", features = ["derive"] }
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

